support for inheriting non-standard attributes (explicit fonts instead of window variants), fixes #3583

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73047 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775